{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 84,
  "lineage": "17b8cdc4-b5ec-b626-7f43-9cb06bd917a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968138089668:internet-gateway/igw-058bf5e84b3da38d6",
            "id": "igw-058bf5e84b3da38d6",
            "owner_id": "968138089668",
            "tags": {
              "Name": "eshop-igw"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eshop-igw",
              "Project": "eshop"
            },
            "vpc_id": "vpc-0b70c4390c2ddbc09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968138089668:route-table/rtb-09188bbe9662a2f0b",
            "id": "rtb-09188bbe9662a2f0b",
            "owner_id": "968138089668",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eshop-private-rt"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eshop-private-rt",
              "Project": "eshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b70c4390c2ddbc09"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968138089668:route-table/rtb-0c9556a4eb65b4b9e",
            "id": "rtb-0c9556a4eb65b4b9e",
            "owner_id": "968138089668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058bf5e84b3da38d6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eshop-public-rt"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eshop-public-rt",
              "Project": "eshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b70c4390c2ddbc09"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dc0eeb630088ee8",
            "route_table_id": "rtb-09188bbe9662a2f0b",
            "subnet_id": "subnet-04d03cdc4f43511a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c95ab3130e07842",
            "route_table_id": "rtb-09188bbe9662a2f0b",
            "subnet_id": "subnet-059d6bcfdd7127444"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029441ccd97108002",
            "route_table_id": "rtb-0c9556a4eb65b4b9e",
            "subnet_id": "subnet-0018a08fc54e138b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028c7fb4286456959",
            "route_table_id": "rtb-0c9556a4eb65b4b9e",
            "subnet_id": "subnet-01c6a58c86ec1179a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968138089668:security-group/sg-072fe4eb84c53cbb2",
            "description": "Security group for EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072fe4eb84c53cbb2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from EKS cluster",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04d2ee1d99dc8ba14"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "NFS from EKS nodes",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0249b4b6c6f7a94ab"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "eshop-efs",
            "name_prefix": "",
            "owner_id": "968138089668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eshop-efs-sg"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eshop-efs-sg",
              "Project": "eshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b70c4390c2ddbc09"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.this",
            "aws_iam_role.eks_cluster",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_security_group.eks_nodes",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968138089668:security-group/sg-0249b4b6c6f7a94ab",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0249b4b6c6f7a94ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "WebApp NodePort from the internet",
                "from_port": 30080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30080
              },
              {
                "cidr_blocks": [],
                "description": "All traffic from worker nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "eshop-eks-nodes",
            "name_prefix": "",
            "owner_id": "968138089668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eshop-eks-nodes-sg"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eshop-eks-nodes-sg",
              "Project": "eshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b70c4390c2ddbc09"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968138089668:security-group/sg-0d630e39763e5aad3",
            "description": "Security group for PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d630e39763e5aad3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EKS cluster",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04d2ee1d99dc8ba14"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EKS nodes",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0249b4b6c6f7a94ab"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "eshop-postgres",
            "name_prefix": "",
            "owner_id": "968138089668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eshop-postgres-sg"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eshop-postgres-sg",
              "Project": "eshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b70c4390c2ddbc09"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.this",
            "aws_iam_role.eks_cluster",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_security_group.eks_nodes",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968138089668:security-group/sg-0bb58fe6e4343634f",
            "description": "Security group for Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb58fe6e4343634f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from EKS cluster",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04d2ee1d99dc8ba14"
                ],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "Redis from EKS nodes",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0249b4b6c6f7a94ab"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "eshop-redis",
            "name_prefix": "",
            "owner_id": "968138089668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eshop-redis-sg"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eshop-redis-sg",
              "Project": "eshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b70c4390c2ddbc09"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.this",
            "aws_iam_role.eks_cluster",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "aws_security_group.eks_nodes",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968138089668:subnet/subnet-04d03cdc4f43511a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d03cdc4f43511a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "968138089668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eshop-private-us-east-1a"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eshop-private-us-east-1a",
              "Project": "eshop"
            },
            "vpc_id": "vpc-0b70c4390c2ddbc09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968138089668:subnet/subnet-059d6bcfdd7127444",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059d6bcfdd7127444",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "968138089668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eshop-private-us-east-1b"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eshop-private-us-east-1b",
              "Project": "eshop"
            },
            "vpc_id": "vpc-0b70c4390c2ddbc09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968138089668:subnet/subnet-0018a08fc54e138b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0018a08fc54e138b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "968138089668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eshop-public-us-east-1a",
              "kubernetes.io/cluster/eshop-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eshop-public-us-east-1a",
              "Project": "eshop",
              "kubernetes.io/cluster/eshop-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b70c4390c2ddbc09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968138089668:subnet/subnet-01c6a58c86ec1179a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c6a58c86ec1179a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "968138089668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eshop-public-us-east-1b",
              "kubernetes.io/cluster/eshop-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eshop-public-us-east-1b",
              "Project": "eshop",
              "kubernetes.io/cluster/eshop-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b70c4390c2ddbc09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968138089668:vpc/vpc-0b70c4390c2ddbc09",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-067a752d694e3b9b7",
            "default_route_table_id": "rtb-07cd443a4cbf73e15",
            "default_security_group_id": "sg-05aa83cca5dc50957",
            "dhcp_options_id": "dopt-0e254692fd67a50b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b70c4390c2ddbc09",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07cd443a4cbf73e15",
            "owner_id": "968138089668",
            "tags": {
              "Name": "eshop-vpc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eshop-vpc",
              "Project": "eshop"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}